<resources>
    <string name="app_name">MessengerApp</string>
    <!-- Global -->
    <string name="cd_avatar_image">Avatar Image</string>
    <!-- Sign In Page -->
    <string name="sign_in_enter_nickname_hint">Enter your nickname</string>
    <string name="sign_in_enter_password_hint">Enter your password</string>
    <string name="sign_in_sign_in_button_value">SIGN IN</string>
    <string name="sign_in_not_registered_string">Not registered?</string>
    <string name="sign_in_sign_up_button_value">SIGN UP</string>
    <!-- Sign Up Page -->
    <string name="sign_up_enter_nickname_hint">Enter your nickname</string>
    <string name="sign_up_enter_password_hint">Enter your password</string>
    <string name="sign_up_what_i_do_hint">What I do</string>
    <string name="sign_up_button_value">SIGN UP</string>
    <!-- Main Page -->
    <string name="main_search_field_value">Search</string>
    <!-- Profile Page -->
    <string name="profile_update_button_value">Update</string>
    <string name="profile_sign_out_button_value">SIGN OUT</string>
    <string name="profile_enter_nickname_hint">Enter your nickname</string>
    <string name="profile_what_i_do_hint">What I do</string>
    <string name="profile_menu_home">Home</string>
    <string name="profile_menu_profile">Profile</string>
    <!-- Chat Page -->
    <string name="chat_message_input_hint">Message</string>
    <!-- Search Page -->
    <string name="search_edittext_hint">Search</string>
    <string name="search_message_no_result">No Result</string>
    <!-- Searched User View -->
    <string name="searched_user_username_tools_hint">Username</string>
    <string name="searched_user_what_i_do_tools_hint">What I Do</string>
    <!-- Chat item -->
    <string name="chat_name"></string>
    <string name="last_message_time"></string>
    <string name="last_message_text"></string>
    <string name="search">Search</string>
    <!-- Loader -->
    <string name="loader_text">Loading</string>
    <string name="text_no_message">no messages</string>
    <string name="hint_message_input">Message</string>
</resources>