<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".view.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/avatar_image_dimen"
                android:layout_height="@dimen/avatar_image_dimen"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/sign_up_avatar_margin_top"
                android:contentDescription="@string/cd_avatar_image"
                android:src="@drawable/avatar_image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sign_up_edittext_username"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/sign_up_edittext_margin_top_1"
                android:hint="@string/sign_up_enter_nickname_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/sign_up_edittext_password"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/sign_up_edittext_margin_top_2"
                android:hint="@string/sign_up_enter_password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_edittext_username" />

            <EditText
                android:id="@+id/sign_up_edittext_what_i_do"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/sign_up_edittext_margin_top_3"
                android:hint="@string/sign_up_what_i_do_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_edittext_password" />

            <Button
                android:id="@+id/sign_up_sign_up_button"
                style="@style/sign_in_up_button_style"
                android:layout_marginTop="@dimen/sing_up_sing_up_margin_top"
                android:hint="@string/sign_up_button_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_edittext_what_i_do" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>