<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".view.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-226dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_profile_image_holder"
                android:layout_width="@dimen/avatar_image_dimen"
                android:layout_height="@dimen/avatar_image_dimen"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/sign_in_avatar_margin_top"
                android:contentDescription="@string/cd_avatar_image"
                android:src="@drawable/avatar_image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sign_in_edittext_username"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/sign_in_edittext_margin_top"
                android:hint="@string/sign_in_enter_nickname_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_image_holder" />

            <EditText
                android:id="@+id/sign_in_edittext_password"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/sign_in_edittext_margin_top"
                android:hint="@string/sign_in_enter_password_hint"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_edittext_username" />

            <Button
                android:id="@+id/sign_in_sign_in_button"
                style="@style/sign_in_up_button_style"
                android:layout_marginTop="@dimen/sign_in_sign_in_margin_top"
                android:hint="@string/sign_in_sign_in_button_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_edittext_password" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sign_in_text_view_margin_top"
                android:text="@string/sign_in_not_registered_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_sign_in_button" />

            <Button
                android:id="@+id/sign_in_sign_up_button"
                style="@style/sign_in_up_button_white_style"
                android:text="@string/sign_in_sign_up_button_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_in_bottom_space_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_sign_up_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>