<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".view.MainActivity">

    <include
        android:id="@+id/loader"
        layout="@layout/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/profile_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_profile_image_holder"
                android:layout_width="@dimen/avatar_image_dimen"
                android:layout_height="@dimen/avatar_image_dimen"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/profile_avatar_margin_top"
                android:contentDescription="@string/cd_avatar_image"
                android:foreground="@drawable/circle_image"
                android:src="@drawable/avatar_image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/profile_edittext_username"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/profile_edittext_margin_top_1"
                android:hint="@string/profile_enter_nickname_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_profile_image_holder" />

            <EditText
                android:id="@+id/profile_edittext_what_i_do"
                style="@style/sign_in_up_edittext_style"
                android:layout_marginTop="@dimen/profile_edittext_margin_top_2"
                android:hint="@string/profile_what_i_do_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_edittext_username" />

            <Button
                android:id="@+id/profile_update_button"
                style="@style/sign_in_up_button_style"
                android:layout_marginTop="@dimen/sign_up_sign_up_margin_top"
                android:hint="@string/profile_update_button_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_edittext_what_i_do" />

            <Button
                android:id="@+id/profile_sign_out_button"
                style="@style/sign_in_up_button_white_style"
                android:layout_marginTop="@dimen/profile_edittext_margin_top_3"
                android:hint="@string/profile_sign_out_button_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_update_button" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_edittext_margin_bottom_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_sign_out_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>