<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/conversationProfilePic"
        android:layout_width="@dimen/dim_conv_list_item_image"
        android:layout_height="@dimen/dim_conv_list_item_image"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:foreground="@drawable/circle_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar_image_placeholder"
        />


    <TextView
        android:id="@+id/conversationUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_name"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toEndOf="@+id/conversationProfilePic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        />

    <TextView
        android:id="@+id/lastMessage"
        android:layout_width="@dimen/height_conv_list_item_text"
        android:layout_height="wrap_content"
        android:text="@string/last_message_text"
        android:textSize="@dimen/text_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        app:layout_constraintStart_toEndOf="@+id/conversationProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/conversationUserName" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_message_time"
        android:textSize="@dimen/text_small"
        android:id="@+id/timeAfterLastMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/margin_small"
        />
</androidx.constraintlayout.widget.ConstraintLayout>